# sfx

./: .gitignore  Cargo.toml  DEVELOPMENT.md  HOTARU_0.8_UPSTREAM_REQUESTS.md  README.md  TICKETS.md  build.rs  sfx_align.md
.github/workflows/: scaffold-check.yml
default/: Cargo.toml.template
default/programfiles/admin_info/: admins.json
default/programfiles/local_auth/: users
default/programfiles/op/: binding.txt  footer.json  hosts.json  l10n.json  navbar.json  support_lang.json
default/programfiles/world/: new1
default/src/: lib.rs  main.rs
default/templates/: index.html
default/templates/admin/: admins.html  index.html  panel.html  user_edit.html
default/templates/base/: base.html  footer.html  navbar.html  path.html
default/templates/static/fdsprivate/: fds-apa.js  pmine-bs.css
default/templates/static/style/: button-bs.css  general.css
default/templates/user/: forbidden.html  home.html  login.html  panel.html  unauthorized.html
src/: admin.rs  lib.rs  local_auth.rs  main.rs  op.rs  user.rs
src/admin/: admins.rs  api.rs  panel.rs
src/local_auth/: analyze.rs  endpoints.rs  fop.rs
src/user/: endpoints.rs  fetch.rs  middleware.rs  server.rs  user.rs
