[package]
name = "sfx"
version = "0.1.3"
edition = "2024"
build = "build.rs"
authors = ["Redstone <redstone@fds.moe>"]
description = "SFX is a streamlined, full-stack Rust framework for building small web services with integrated authentication, localization, and config-driven UI components"
repository = "https://github.com/Field-of-Dreams-Studio/sfx"
homepage = "https://fds.rs/sfx/"
license = "MIT"
categories = ["network-programming", "web-programming::http-server" ]
keywords = ["full-stack", "web-framework"]
readme = "README.md"

[lib]
name = "sfx"
path = "src/lib.rs"

[[bin]]
name = "sfx"
path = "src/main.rs"


[dependencies]
hotaru = { git = "https://github.com/Field-of-Dreams-Studio/hotaru", rev = "376ccbe885a63e637256ff4dbf75fbe01c5e794d", features = ["https"] }
hotaru_lib = { git = "https://github.com/Field-of-Dreams-Studio/hotaru", rev = "376ccbe885a63e637256ff4dbf75fbe01c5e794d" }
htmstd = { git = "https://github.com/Field-of-Dreams-Studio/hotaru", rev = "376ccbe885a63e637256ff4dbf75fbe01c5e794d" }

# Required as a direct dep so `object!` / `akari_render!` (re-exported via
# hotaru::prelude) can resolve `::akari::…` paths emitted by akari_macro.
# `full` enables `template`, needed by akari_render!.
akari = { version = "0.2.8", features = ["full"] }

tracing = "0.1.41"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
include_dir = "0.7"
tokio = { version = "1.28", features = ["rt", "sync", "time", "macros"] }
